sort package.jons

--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -1,107 +1,107 @@
 {
-	"name": "sample-stack-backend-server",
-	"version": "0.0.1",
-	"description": "Starter kit for apollo server using webpack and typescript",
-	"main": "dist/index.js",
-	"private": true,
-	"scripts": {
-		"prepublish": "npm run build:clean",
-		"build:clean": "rimraf dist",
-		"build": "cross-env NODE_ENV=production zen build",
-		"start": "cross-env NODE_ENV=production pm2-runtime  dist/index.js",
-		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
-		"start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
-		"watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env zen watch",
-		"watch:debug": "npm run watch -- -v",
-		"watch:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch",
-		"watch:staging": "cross-env NODE_ENV=test ENV_FILE=../../config/staging/staging.env zen watch",
-		"test": "jest",
-		"test:watch": "npm test -- --watch",
-		"test:notify": "npm run test:watch -- --notify",
-		"docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
-		"docker:run": "docker run  --env-file ../../config/staging/docker-staging.env -p 8080:8080 -it $npm_package_name:$npm_package_version",
-		"preupver": "npm test",
-		"upver": "standard-version",
-		"db:migrate": "knex -- migrate:latest --cwd . --knexfile ./knexfile.js",
-		"db:migrate:rollback": "knex -- migrate:rollback  --cwd . --knexfile ./knexfile.js",
-		"db:seed": "npm run db:migrate && knex -- seed:run  --cwd . --knexfile ./knexfile.js",
-		"stagedb:migrate": "cross-env ENV_FILE=../../config/test/test.env NODE_ENV=test npm run db:migrate",
-		"stagedb:migrate:rollback": "cross-env ENV_FILE=../../config/test/test.env NODE_ENV=test npm run db:migrate:rollback",
-		"stagedb:seed": "cross-env ENV_FILE=../../config/test/test.env NODE_ENV=test npm run db:seed",
-		"proddb:migrate": "NODE_ENV=production npm run db:migrate",
-		"proddb:migrate:rollback": "NODE_ENV=production npm run db:migrate:rollback",
-		"proddb:seed": "NODE_ENV=production npm run db:seed"
-	},
-	"keywords": [
-		"apollo",
-		"backend",
-		"apollo-server",
-		"typescript",
-		"webpack",
-		"graphql",
-		"graphiql",
-		"express"
-	],
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/cdmbase/fullstack-pro.git"
-	},
-	"author": "CDMBase LLC",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/cdmbase/fullstack-pro/issues"
-	},
-	"homepage": "https://github.com/cdmbase/fullstack-pro#readme",
-	"dependencies": {
-		"@cdm-logger/server": "^5.0.5",
-		"@common-stack/core": "0.0.203",
-		"@common-stack/server-core": "0.0.203",
-		"@sample-stack/core": "file:../../packages/sample-core",
-		"@sample-stack/counter-module-server": "file:../../packages-modules/counter/server",
-		"@sample-stack/graphql-schema": "file:../../packages/sample-graphql-schema",
-		"@sample-stack/microservice-nats": "file:../../packages/sample-microservice-nats",
-		"@sample-stack/server-core": "file:../../packages/sample-server-core",
-		"@sample-stack/store": "file:../../packages/sample-store",
-		"apollo-datasource-rest": "^2.0.0-rc.8",
-		"apollo-errors": "^1.9.0",
-		"apollo-link": "^1.2.11",
-		"apollo-link-batch-http": "^1.2.11",
-		"apollo-link-context": "^1.0.17",
-		"apollo-link-error": "^1.1.10",
-		"apollo-link-http": "^1.5.14",
-		"apollo-link-ws": "^1.0.17",
-		"apollo-logger": "^0.3.1",
-		"apollo-server-core": "^2.4.8",
-		"apollo-server-express": "^2.4.8",
-		"app-root-path": "^2.2.1",
-		"body-parser": "^1.19.0",
-		"cors": "^2.8.5",
-		"dotenv": "^7.0.0",
-		"envalid": "^5.0.0",
-		"esm": "^3.2.22",
-		"express": "^4.16.4",
-		"graphql": "^14.2.1",
-		"graphql-nats-subscriptions": "^1.3.0",
-		"graphql-type-json": "^0.3.0",
-		"graphql-subscriptions": "^1.1.0",
-		"graphql-tools": "^4.0.4",
-		"hemera-plugin": "2.0.1",
-		"inversify": "^5.0.1",
-		"isomorphic-fetch": "^2.2.1",
-		"knex": "^0.16.5",
-		"lodash": "^4.17.11",
-		"morgan": "^1.9.1",
-		"nats": "^1.2.10",
-		"nats-hemera": "^7.0.1",
-		"reflect-metadata": "^0.1.13",
-		"rxjs": "^6.5.1",
-		"rxjs-compat": "^6.5.1",
-		"subscriptions-transport-ws": "0.9.15",
-		"universal-cookie-express": "^3.1.0",
-		"ws": "^6.2.1"
-	},
-	"typings": "dist/main.d.ts",
-	"typescript": {
-		"definition": "dist/main.d.ts"
-	}
+  "name": "sample-stack-backend-server",
+  "version": "0.0.1",
+  "private": true,
+  "description": "Starter kit for apollo server using webpack and typescript",
+  "keywords": [
+    "apollo",
+    "apollo-server",
+    "backend",
+    "express",
+    "graphiql",
+    "graphql",
+    "typescript",
+    "webpack"
+  ],
+  "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
+  "bugs": {
+    "url": "https://github.com/cdmbase/fullstack-pro/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cdmbase/fullstack-pro.git"
+  },
+  "license": "MIT",
+  "author": "CDMBase LLC",
+  "main": "dist/index.js",
+  "typings": "dist/main.d.ts",
+  "scripts": {
+    "build": "cross-env NODE_ENV=production zen build",
+    "build:clean": "rimraf dist",
+    "db:migrate": "knex -- migrate:latest --cwd . --knexfile ./knexfile.js",
+    "db:migrate:rollback": "knex -- migrate:rollback  --cwd . --knexfile ./knexfile.js",
+    "db:seed": "npm run db:migrate && knex -- seed:run  --cwd . --knexfile ./knexfile.js",
+    "docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
+    "docker:run": "docker run  --env-file ../../config/staging/docker-staging.env -p 8080:8080 -it $npm_package_name:$npm_package_version",
+    "proddb:migrate": "NODE_ENV=production npm run db:migrate",
+    "proddb:migrate:rollback": "NODE_ENV=production npm run db:migrate:rollback",
+    "proddb:seed": "NODE_ENV=production npm run db:seed",
+    "prepublish": "npm run build:clean",
+    "stagedb:migrate": "cross-env ENV_FILE=../../config/test/test.env NODE_ENV=test npm run db:migrate",
+    "stagedb:migrate:rollback": "cross-env ENV_FILE=../../config/test/test.env NODE_ENV=test npm run db:migrate:rollback",
+    "stagedb:seed": "cross-env ENV_FILE=../../config/test/test.env NODE_ENV=test npm run db:seed",
+    "start": "cross-env NODE_ENV=production pm2-runtime  dist/index.js",
+    "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
+    "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
+    "test": "jest",
+    "test:notify": "npm run test:watch -- --notify",
+    "test:watch": "npm test -- --watch",
+    "preupver": "npm test",
+    "upver": "standard-version",
+    "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env zen watch",
+    "watch:debug": "npm run watch -- -v",
+    "watch:staging": "cross-env NODE_ENV=test ENV_FILE=../../config/staging/staging.env zen watch",
+    "watch:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch"
+  },
+  "dependencies": {
+    "@cdm-logger/server": "^5.0.5",
+    "@common-stack/core": "0.0.203",
+    "@common-stack/server-core": "0.0.203",
+    "@sample-stack/core": "file:../../packages/sample-core",
+    "@sample-stack/counter-module-server": "file:../../packages-modules/counter/server",
+    "@sample-stack/graphql-schema": "file:../../packages/sample-graphql-schema",
+    "@sample-stack/microservice-nats": "file:../../packages/sample-microservice-nats",
+    "@sample-stack/server-core": "file:../../packages/sample-server-core",
+    "@sample-stack/store": "file:../../packages/sample-store",
+    "apollo-datasource-rest": "^2.0.0-rc.8",
+    "apollo-errors": "^1.9.0",
+    "apollo-link": "^1.2.11",
+    "apollo-link-batch-http": "^1.2.11",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-error": "^1.1.10",
+    "apollo-link-http": "^1.5.14",
+    "apollo-link-ws": "^1.0.17",
+    "apollo-logger": "^0.3.1",
+    "apollo-server-core": "^2.4.8",
+    "apollo-server-express": "^2.4.8",
+    "app-root-path": "^2.2.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
+    "envalid": "^5.0.0",
+    "esm": "^3.2.22",
+    "express": "^4.16.4",
+    "graphql": "^14.2.1",
+    "graphql-nats-subscriptions": "^1.3.0",
+    "graphql-subscriptions": "^1.1.0",
+    "graphql-tools": "^4.0.4",
+    "graphql-type-json": "^0.3.0",
+    "hemera-plugin": "2.0.1",
+    "inversify": "^5.0.1",
+    "isomorphic-fetch": "^2.2.1",
+    "knex": "^0.16.5",
+    "lodash": "^4.17.11",
+    "morgan": "^1.9.1",
+    "nats": "^1.2.10",
+    "nats-hemera": "^7.0.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.1",
+    "rxjs-compat": "^6.5.1",
+    "subscriptions-transport-ws": "0.9.15",
+    "universal-cookie-express": "^3.1.0",
+    "ws": "^6.2.1"
+  },
+  "typescript": {
+    "definition": "dist/main.d.ts"
+  }
 }
