--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -1,132 +1,132 @@
 {
-	"name": "sample-stack-frontend-server",
-	"version": "0.0.1",
-	"description": "Sample Client server",
-	"private": true,
-	"main": "index.js",
-	"scripts": {
-		"docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
-		"docker:build:debug": "npm run build:debug && docker build . -t $npm_package_name:$npm_package_version",
-		"docker:run": "docker run  --env-file ../../config/staging/docker-staging.env  -p 3010:3010  -it $npm_package_name:$npm_package_version",
-		"prebuild": "npm run build:clean",
-		"build:clean": "rimraf dist",
-		"build": "cross-env NODE_ENV=production zen build",
-		"build:debug": "cross-env DEBUGGING=true NODE_ENV=production zen build",
-		"build:debug:verbose": "npm run build:debug -- -v",
-		"start": "cross-env NODE_ENV=production pm2-runtime  dist/index.js",
-		"start:dev": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env node --harmony dist",
-		"start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
-		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
-		"watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env zen watch",
-		"watch:ssr": "cross-env SSR=true && npm run watch",
-		"watch:debug": "npm run watch -- -v",
-		"watch:test": "cross-env ENV_FILE=../../config/test/test.env zen watch",
-		"watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env zen watch",
-		"jest": "./node_modules/.bin/jest",
-		"test": "jest",
-		"test:debug": "npm test -- --runInBand",
-		"test:watch": "npm test -- --watch"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/cdmbase/fullstack-pro.git"
-	},
-	"author": "CDMBase LLC",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/cdmbase/fullstack-pro/issues"
-	},
-	"homepage": "https://github.com/cdmbase/fullstack-pro#readme",
-	"dependencies": {
-		"@cdm-logger/client": "^5.0.7",
-		"@cdm-logger/server": "^5.0.5",
-		"@common-stack/client-core": "0.0.203",
-		"@common-stack/client-react": "0.0.203",
-		"@common-stack/client-redux": "0.0.203",
-		"@common-stack/core": "0.0.203",
-		"@common-stack/server-core": "0.0.203",
-		"@sample-stack/client-react": "file:../../packages/sample-client-react",
-		"@sample-stack/client-state": "file:../../packages/sample-client-state",
-		"@sample-stack/core": "file:../../packages/sample-core",
-		"@sample-stack/counter-module-browser": "file:../../packages-modules/counter/browser",
-		"apollo-cache-inmemory": "^1.5.1",
-		"apollo-client": "^2.5.1",
-		"apollo-fetch": "^0.7.0",
-		"apollo-link": "^1.2.11",
-		"apollo-link-batch-http": "^1.2.11",
-		"apollo-link-context": "^1.0.17",
-		"apollo-link-debounce": "^2.1.0",
-		"apollo-link-error": "^1.1.10",
-		"apollo-link-http": "^1.5.14",
-		"apollo-link-logger": "^1.2.3",
-		"apollo-link-schema": "^1.2.2",
-		"apollo-link-retry": "^2.2.13",
-		"apollo-link-ws": "^1.0.17",
-		"apollo-logger": "^0.3.1",
-		"browser-bunyan": "^1.5.2",
-		"bunyan": "^1.8.12",
-		"classnames": "^2.2.6",
-		"connected-react-router": "^6.4.0",
-		"cors": "^2.8.5",
-		"dotenv": "^7.0.0",
-		"envalid": "^5.0.0",
-		"error-stack-parser": "^2.0.2",
-		"esm": "^3.2.22",
-		"fela": "10.2.4",
-		"fela-beautifier": "^10.2.4",
-		"fela-dom": "10.2.4",
-		"fela-font-renderer": "^5.0.25",
-		"fela-perf": "^10.2.4",
-		"fela-plugin-fallback-value": "^10.2.4",
-		"fela-plugin-logger": "^10.2.4",
-		"fela-plugin-lvha": "^5.0.16",
-		"fela-plugin-prefixer": "^10.2.4",
-		"fela-plugin-unit": "^10.2.4",
-		"fela-plugin-validator": "^10.2.4",
-		"fela-preset-web": "^10.2.4",
-		"graphql": "^14.2.1",
-		"graphql-tag": "^2.10.1",
-		"history": "^4.9.0",
-		"immutability-helper": "^3.0.0",
-		"inversify": "^5.0.1",
-		"isomorphic-fetch": "^2.2.1",
-		"js-cookie": "^2.2.0",
-		"lodash": "^4.17.11",
-		"ramda": "^0.26.1",
-		"react": "^16.8.6",
-		"react-apollo": "^2.5.5",
-		"react-dom": "^16.8.6",
-		"react-fela": "10.2.4",
-		"react-helmet": "^5.2.0",
-		"react-loadable": "^5.5.0",
-		"react-redux": "^7.0.3",
-		"react-redux-typescript": "^2.4.0",
-		"react-resizable": "^1.7.5",
-		"react-router": "^5.0.0",
-		"react-router-config": "^5.0.0",
-		"react-router-dom": "^5.0.0",
-		"react-router-redux": "^5.0.0-alpha.8",
-		"react-transition-group": "^4.0.0",
-		"redux": "^4.0.1",
-		"redux-observable": "^1.1.0",
-		"redux-persist": "^5.10.0",
-		"redux-logger": "^3.0.6",
-		"redux-thunk": "^2.3.0",
-		"reselect": "^4.0.0",
-		"serialize-javascript": "^1.7.0",
-		"sourcemapped-stacktrace": "^1.1.9",
-		"subscriptions-transport-ws": "0.9.15",
-		"universal-cookie-express": "^3.1.0"
-	},
-	"jest": {
-		"moduleFileExtensions": [
-			"ts",
-			"tsx",
-			"js"
-		],
-		"transform": {
-			"\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
-		},
-		"testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
-	}
+  "name": "sample-stack-frontend-server",
+  "version": "0.0.1",
+  "private": true,
+  "description": "Sample Client server",
+  "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
+  "bugs": {
+    "url": "https://github.com/cdmbase/fullstack-pro/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cdmbase/fullstack-pro.git"
+  },
+  "license": "MIT",
+  "author": "CDMBase LLC",
+  "main": "index.js",
+  "scripts": {
+    "prebuild": "npm run build:clean",
+    "build": "cross-env NODE_ENV=production zen build",
+    "build:clean": "rimraf dist",
+    "build:debug": "cross-env DEBUGGING=true NODE_ENV=production zen build",
+    "build:debug:verbose": "npm run build:debug -- -v",
+    "docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
+    "docker:build:debug": "npm run build:debug && docker build . -t $npm_package_name:$npm_package_version",
+    "docker:run": "docker run  --env-file ../../config/staging/docker-staging.env  -p 3010:3010  -it $npm_package_name:$npm_package_version",
+    "jest": "./node_modules/.bin/jest",
+    "start": "cross-env NODE_ENV=production pm2-runtime  dist/index.js",
+    "start:dev": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env node --harmony dist",
+    "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
+    "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
+    "test": "jest",
+    "test:debug": "npm test -- --runInBand",
+    "test:watch": "npm test -- --watch",
+    "watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env zen watch",
+    "watch:debug": "npm run watch -- -v",
+    "watch:ssr": "cross-env SSR=true && npm run watch",
+    "watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env zen watch",
+    "watch:test": "cross-env ENV_FILE=../../config/test/test.env zen watch"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "testRegex": "/__tests__/.*\\.(ts|tsx|js)$",
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
+    }
+  },
+  "dependencies": {
+    "@cdm-logger/client": "^5.0.7",
+    "@cdm-logger/server": "^5.0.5",
+    "@common-stack/client-core": "0.0.203",
+    "@common-stack/client-react": "0.0.203",
+    "@common-stack/client-redux": "0.0.203",
+    "@common-stack/core": "0.0.203",
+    "@common-stack/server-core": "0.0.203",
+    "@sample-stack/client-react": "file:../../packages/sample-client-react",
+    "@sample-stack/client-state": "file:../../packages/sample-client-state",
+    "@sample-stack/core": "file:../../packages/sample-core",
+    "@sample-stack/counter-module-browser": "file:../../packages-modules/counter/browser",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-fetch": "^0.7.0",
+    "apollo-link": "^1.2.11",
+    "apollo-link-batch-http": "^1.2.11",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-debounce": "^2.1.0",
+    "apollo-link-error": "^1.1.10",
+    "apollo-link-http": "^1.5.14",
+    "apollo-link-logger": "^1.2.3",
+    "apollo-link-retry": "^2.2.13",
+    "apollo-link-schema": "^1.2.2",
+    "apollo-link-ws": "^1.0.17",
+    "apollo-logger": "^0.3.1",
+    "browser-bunyan": "^1.5.2",
+    "bunyan": "^1.8.12",
+    "classnames": "^2.2.6",
+    "connected-react-router": "^6.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
+    "envalid": "^5.0.0",
+    "error-stack-parser": "^2.0.2",
+    "esm": "^3.2.22",
+    "fela": "10.2.4",
+    "fela-beautifier": "^10.2.4",
+    "fela-dom": "10.2.4",
+    "fela-font-renderer": "^5.0.25",
+    "fela-perf": "^10.2.4",
+    "fela-plugin-fallback-value": "^10.2.4",
+    "fela-plugin-logger": "^10.2.4",
+    "fela-plugin-lvha": "^5.0.16",
+    "fela-plugin-prefixer": "^10.2.4",
+    "fela-plugin-unit": "^10.2.4",
+    "fela-plugin-validator": "^10.2.4",
+    "fela-preset-web": "^10.2.4",
+    "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
+    "history": "^4.9.0",
+    "immutability-helper": "^3.0.0",
+    "inversify": "^5.0.1",
+    "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.2.0",
+    "lodash": "^4.17.11",
+    "ramda": "^0.26.1",
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.5",
+    "react-dom": "^16.8.6",
+    "react-fela": "10.2.4",
+    "react-helmet": "^5.2.0",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.0.3",
+    "react-redux-typescript": "^2.4.0",
+    "react-resizable": "^1.7.5",
+    "react-router": "^5.0.0",
+    "react-router-config": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "react-transition-group": "^4.0.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-observable": "^1.1.0",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "serialize-javascript": "^1.7.0",
+    "sourcemapped-stacktrace": "^1.1.9",
+    "subscriptions-transport-ws": "0.9.15",
+    "universal-cookie-express": "^3.1.0"
+  }
 }
