--- a/package.json
+++ b/package.json
@@ -1,73 +1,82 @@
 {
   "name": "sample-stack",
-  "private": true,
   "version": "0.4.7",
-  "scripts": {
-    "jest": "./node_modules/.bin/jest",
-    "compile": "lerna exec -- npm run compile",
-    "cli": "node tools/cli",
-    "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
-    "lerna:prepublish": "git checkout publish && git merge -s recursive -X theirs master",
-    "publish": "npm run lerna:prepublish && lerna publish --cd-version=patch",
-    "postpublish": "git checkout master",
-    "publish:force": "npm run publish -- --force-publish=*",
-    "lerna:predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
-    "devpublish": "npm run lerna:predevpublish && lerna publish --cd-version=prerelease",
-    "postdevpublish": "git checkout develop",
-    "generateGraphql": "graphql-codegen",
-    "generateGraphql:watch": "npm run generateGraphql -- --watch",
-    "devpublish:force": "npm run devpublish -- --force-publish=*",
-    "lerna": "lerna bootstrap --hoist",
-    "clean": "lerna clean --yes && npm run build:clean && rimraf node_modules",
-    "clean:force": "rimraf package-lock.json && npm run clean",
-    "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
-    "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
-    "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch",
-    "zen:build": "cross-env NODE_ENV=production zen build",
-    "zen:watch": "zen watch",
-    "zen:watch:debug": "npm run zen:watch -- -v",
-    "zen:exp": "zen exp",
-    "postbootstrap": "npm run build",
-    "prebootstrap": "lerna run prepare",
-    "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
-    "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
-    "build": "npm run build:packages",
-    "build:packages": "lerna run build --ignore *server",
-    "build:clean": "lerna exec npm run build:clean",
-    "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
-    "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.js",
-    "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
-    "db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
-    "test": "cross-env ENV_FILE=config/test/test.env jest",
-    "test:watch": "npm test -- --watch",
-    "posttest": "npm run lint",
-    "coverage": "jest --coverage",
-    "pretravis": "npm run compile",
-    "travis": "istanbul cover -x \"*.test.js\" _mocha -- --timeout 5000 --full-trace ./test/tests.js",
-    "posttravis": "npm run lint",
-    "postcoverage": "remap-istanbul --input coverage/coverage.raw.json --type lcovonly --output coverage/lcov.info",
-    "check-updates": "lerna exec ./node_modules/.bin/npm-check-updates -- -u"
+  "private": true,
+  "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
+  "bugs": {
+    "url": "https://github.com/cdmbase/fullstack-pro/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cdmbase/fullstack-pro.git"
   },
-  "author": "CDMBase LLC",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/cdmbase/fullstack-pro/issues"
-  },
-  "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
-  "engines": {
-    "node": ">=10.15.3",
-    "npm": ">=6.4.1"
-  },
-  "cacheDirectories": [
-    ".cache"
-  ],
+  "author": "CDMBase LLC",
   "workspaces": [
     "servers/*"
   ],
+  "scripts": {
+    "build": "npm run build:packages",
+    "build:clean": "lerna exec npm run build:clean",
+    "build:packages": "lerna run build --ignore *server",
+    "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
+    "check-updates": "lerna exec ./node_modules/.bin/npm-check-updates -- -u",
+    "clean": "lerna clean --yes && npm run build:clean && rimraf node_modules",
+    "clean:force": "rimraf package-lock.json && npm run clean",
+    "cli": "node tools/cli",
+    "compile": "lerna exec -- npm run compile",
+    "coverage": "jest --coverage",
+    "postcoverage": "remap-istanbul --input coverage/coverage.raw.json --type lcovonly --output coverage/lcov.info",
+    "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.js",
+    "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
+    "db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
+    "devpublish": "npm run lerna:predevpublish && lerna publish --cd-version=prerelease",
+    "postdevpublish": "git checkout develop",
+    "devpublish:force": "npm run devpublish -- --force-publish=*",
+    "generateGraphql": "graphql-codegen",
+    "generateGraphql:watch": "npm run generateGraphql -- --watch",
+    "jest": "./node_modules/.bin/jest",
+    "lerna": "lerna bootstrap --hoist",
+    "lerna:predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
+    "lerna:prepublish": "git checkout publish && git merge -s recursive -X theirs master",
+    "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
+    "postbootstrap": "npm run build",
+    "prebootstrap": "lerna run prepare",
+    "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
+    "publish": "npm run lerna:prepublish && lerna publish --cd-version=patch",
+    "postpublish": "git checkout master",
+    "publish:force": "npm run publish -- --force-publish=*",
+    "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
+    "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
+    "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch",
+    "test": "cross-env ENV_FILE=config/test/test.env jest",
+    "posttest": "npm run lint",
+    "test:watch": "npm test -- --watch",
+    "pretravis": "npm run compile",
+    "travis": "istanbul cover -x \"*.test.js\" _mocha -- --timeout 5000 --full-trace ./test/tests.js",
+    "posttravis": "npm run lint",
+    "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
+    "zen:build": "cross-env NODE_ENV=production zen build",
+    "zen:exp": "zen exp",
+    "zen:watch": "zen watch",
+    "zen:watch:debug": "npm run zen:watch -- -v"
+  },
+  "dependencies": {
+    "@sample-stack/client-react": "file:packages/sample-client-react",
+    "@sample-stack/client-state": "file:packages/sample-client-state",
+    "@sample-stack/core": "file:packages/sample-core",
+    "@sample-stack/counter-module-browser": "file:packages-modules/counter/browser",
+    "@sample-stack/counter-module-server": "file:packages-modules/counter/server",
+    "@sample-stack/graphql-schema": "file:packages/sample-graphql-schema",
+    "@sample-stack/hemera-plugin": "file:packages/sample-hemera-plugin",
+    "@sample-stack/microservice-nats": "file:packages/sample-microservice-nats",
+    "@sample-stack/sample-module": "file:packages-modules/sample-module",
+    "@sample-stack/server-core": "file:packages/sample-server-core",
+    "@sample-stack/store": "file:packages/sample-store",
+    "sample-stack-backend-server": "file:servers/backend-server",
+    "sample-stack-frontend-server": "file:servers/frontend-server",
+    "sample-stack-hemera-server": "file:servers/hemera-server"
+  },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
@@ -252,20 +261,11 @@
     "webpack-visualizer-plugin": "^0.1.11",
     "ws": "^6.2.1"
   },
-  "dependencies": {
-    "@sample-stack/client-react": "file:packages/sample-client-react",
-    "@sample-stack/client-state": "file:packages/sample-client-state",
-    "@sample-stack/core": "file:packages/sample-core",
-    "@sample-stack/counter-module-browser": "file:packages-modules/counter/browser",
-    "@sample-stack/counter-module-server": "file:packages-modules/counter/server",
-    "@sample-stack/graphql-schema": "file:packages/sample-graphql-schema",
-    "@sample-stack/hemera-plugin": "file:packages/sample-hemera-plugin",
-    "@sample-stack/microservice-nats": "file:packages/sample-microservice-nats",
-    "@sample-stack/sample-module": "file:packages-modules/sample-module",
-    "@sample-stack/server-core": "file:packages/sample-server-core",
-    "@sample-stack/store": "file:packages/sample-store",
-    "sample-stack-backend-server": "file:servers/backend-server",
-    "sample-stack-frontend-server": "file:servers/frontend-server",
-    "sample-stack-hemera-server": "file:servers/hemera-server"
-  }
+  "engines": {
+    "node": ">=10.15.3",
+    "npm": ">=6.4.1"
+  },
+  "cacheDirectories": [
+    ".cache"
+  ]
 }
