upgrade react-apollo

--- a/packages-modules/counter/browser/tsconfig.json
+++ b/packages-modules/counter/browser/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "declarationDir": "lib",
     "rootDir": "./src",
     "outDir": "../lib",
