--- a/packages/sample-client-react/tsconfig.json
+++ b/packages/sample-client-react/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "rootDir": "./src",
     "outDir": "../lib",
     "jsx": "react",
