--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -59,19 +59,18 @@
     "@common-stack/server-core": "0.0.203",
     "@sample-stack/core": "file:../../packages/sample-core",
     "@sample-stack/counter-module-server": "file:../../packages-modules/counter/server",
-    "@sample-stack/graphql-schema": "file:../../packages/sample-graphql-schema",
     "@sample-stack/microservice-nats": "file:../../packages/sample-microservice-nats",
     "@sample-stack/server-core": "file:../../packages/sample-server-core",
     "@sample-stack/store": "file:../../packages/sample-store",
-    "apollo-datasource-rest": "^2.0.0-rc.8",
+    "apollo-datasource-rest": "^0.6.1",
     "apollo-errors": "^1.9.0",
-    "apollo-link": "^1.2.11",
-    "apollo-link-batch-http": "^1.2.11",
-    "apollo-link-context": "^1.0.17",
-    "apollo-link-error": "^1.1.10",
-    "apollo-link-http": "^1.5.14",
-    "apollo-link-ws": "^1.0.17",
-    "apollo-logger": "^0.3.1",
+    "apollo-link": "^1.2.12",
+    "apollo-link-batch-http": "^1.2.12",
+    "apollo-link-context": "^1.0.18",
+    "apollo-link-error": "^1.1.11",
+    "apollo-link-http": "^1.5.15",
+    "apollo-link-ws": "^1.0.18",
+    "apollo-logger": "^0.3.2",
     "apollo-server-core": "^2.4.8",
     "apollo-server-express": "^2.4.8",
     "app-root-path": "^2.2.1",
