--- a/lerna.json
+++ b/lerna.json
@@ -13,10 +13,26 @@
   },
   "command": {
     "publish": {
-      "allowBranch": ["publish", "devpublish"]
+      "allowBranch": [
+        "publish",
+        "devpublish"
+      ],
+      "message": "chore(release): publish"
     },
     "bootstrap": {
-      "npmClientArgs": ["--no-package-lock"]      
+      "npmClientArgs": [
+        "--no-package-lock"
+      ]
+    },
+    "version": {
+      "allowBranch": [
+        "master",
+        "develop"
+      ],
+      "conventionalCommits": true,
+      "gitTagVersion": false,
+      "noPush": true,
+      "git-remote": "devpublish"
     }
   },
   "packages": [
