--- a/package.json
+++ b/package.json
@@ -260,8 +260,8 @@
     "ws": "^6.2.1"
   },
   "engines": {
-    "node": ">=10.15.3",
-    "npm": ">=6.4.1"
+    "node": ">=10.15.3 < 12.0.0",
+    "npm": ">=6.x < 7.x"
   },
   "cacheDirectories": [
     ".cache"
