--- a/package.json
+++ b/package.json
@@ -31,14 +31,13 @@
     "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "devpublish": "npm run lerna:predevpublish && lerna publish --cd-version=prerelease",
-    "postdevpublish": "git add . && git commit -m 'publish' && git checkout develop",
+    "postdevpublish": "git checkout develop",
     "devpublish:force": "npm run devpublish -- --force-publish=*",
     "generateGraphql": "graphql-codegen",
     "generateGraphql:watch": "npm run generateGraphql -- --watch",
     "jest": "./node_modules/.bin/jest",
     "lerna": "lerna bootstrap --hoist",
     "lerna:predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
-    "lerna:prepublish": "git checkout publish && git merge -s recursive -X theirs master",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "postbootstrap": "npm run build",
     "prebootstrap": "lerna run prepare",
