--- a/package.json
+++ b/package.json
@@ -30,21 +30,15 @@
     "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
-    "devpublish": "npm run lerna:predevpublish && lerna publish --cd-version=prerelease",
-    "postdevpublish": "git checkout develop",
-    "devpublish:force": "npm run devpublish -- --force-publish=*",
     "generateGraphql": "graphql-codegen",
     "generateGraphql:watch": "npm run generateGraphql -- --watch",
     "jest": "./node_modules/.bin/jest",
     "lerna": "lerna bootstrap --hoist",
-    "lerna:predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
+    "devpublish": "lerna publish --cd-version=prerelease",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "postbootstrap": "npm run build",
     "prebootstrap": "lerna run prepare",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
-    "publish": "npm run lerna:prepublish && lerna publish --cd-version=patch",
-    "postpublish": "git checkout master",
-    "publish:force": "npm run publish -- --force-publish=*",
     "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
     "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run zen:watch",
     "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch",
