--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lerna": "lerna bootstrap --hoist",
     "predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
     "devpublish": "lerna publish --cd-version=prerelease",
+    "postdevpublish": "git add . && git commit -m 'update chagne log' && git checkout develop",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "postbootstrap": "npm run build",
     "prebootstrap": "lerna run prepare",
