update devpublish to avoid scripts

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jest": "./node_modules/.bin/jest",
     "lerna": "lerna bootstrap --hoist",
     "predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
-    "devpublish": "lerna publish --cd-version=prerelease",
+    "devpublish": "lerna publish --ignore-scripts --cd-version=prerelease",
     "postdevpublish": "git add . && git commit -m 'update chagne log' && git checkout develop",
     "prepublish": "git checkout publish && git merge -s recursive -X theirs master",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
