--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "lerna": "lerna bootstrap --hoist",
     "predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
     "devpublish": "lerna publish --ignore-scripts --cd-version=prerelease",
-    "postdevpublish": "git add . && git commit -m 'update chagne log' && git checkout develop",
+    "postdevpublish": "git add . && git commit -m 'update change log' && git checkout develop",
     "prepublish": "git checkout publish && git merge -s recursive -X theirs master",
+    "publish": "npm run lerna:prepublish && lerna publish --ignore-scripts --cd-version=patch",
+    "postpublish": "git checkout master",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "postbootstrap": "npm run build",
     "prebootstrap": "lerna run prepare",
