--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "lerna": "lerna bootstrap --hoist",
     "predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
     "devpublish": "lerna publish --ignore-scripts --cd-version=prerelease",
+    "devpublish:force": "npm run devpublish -- --force-publish=*",
     "postdevpublish": "git add . && git commit -m 'update change log' && git checkout develop",
     "prepublish": "git checkout publish && git merge -s recursive -X theirs master",
     "publish": "npm run lerna:prepublish && lerna publish --ignore-scripts --cd-version=patch",
+    "publish:force": "npm run publish -- --force-publish=*",
     "postpublish": "git checkout master",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "postbootstrap": "npm run build",
