--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -100,6 +100,10 @@
     "universal-cookie-express": "^3.1.0",
     "ws": "^6.2.1"
   },
+  "devDependencies": {
+    "cross-env": "^5.2.0",
+    "rimraf": "^2.6.3"
+  },
   "typescript": {
     "definition": "dist/main.d.ts"
   }
