--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -103,8 +103,8 @@
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
-    "rimraf": "^2.6.3",
-    "pm2": "^3.5.0"
+    "pm2": "^3.5.0",
+    "rimraf": "^2.6.3"
   },
   "typescript": {
     "definition": "dist/main.d.ts"
