--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -126,5 +126,10 @@
     "sourcemapped-stacktrace": "^1.1.9",
     "subscriptions-transport-ws": "0.9.15",
     "universal-cookie-express": "^3.1.0"
+  },
+  "devDependencies": {
+    "cross-env": "^5.2.0",
+    "pm2": "^3.5.0",
+    "rimraf": "^2.6.3"
   }
 }
