--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -43,5 +43,10 @@
         "nats": "^1.2.10",
         "nats-hemera": "^7.0.1",
         "reflect-metadata": "^0.1.13"
-    }
+    },
+    "devDependencies": {
+        "cross-env": "^5.2.0",
+        "pm2": "^3.5.0",
+        "rimraf": "^2.6.3"
+      }
 }
