--- a/lerna.json
+++ b/lerna.json
@@ -13,33 +13,19 @@
   "command": {
     "publish": {
       "graphType": "all",
-      "allowBranch": [
-        "publish",
-        "devpublish"
-      ],
+      "allowBranch": ["publish", "devpublish"],
       "message": "chore(release): publish"
     },
     "bootstrap": {
-      "npmClientArgs": [
-        "--no-package-lock"
-      ]
+      "npmClientArgs": ["--no-package-lock"]
     },
     "version": {
-      "allowBranch": [
-        "master",
-        "develop",
-        "publish",
-        "devpublish"
-      ],
+      "allowBranch": ["master", "develop", "publish", "devpublish"],
       "conventionalCommits": true,
       "createRelease": "github",
       "message": "chore: release package(s)"
     }
   },
-  "packages": [
-    "packages-modules/**",
-    "packages/*",
-    "servers/*"
-  ],
+  "packages": ["packages-modules/**", "packages/*", "servers/*"],
   "version": "0.0.37-9"
 }
