--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -54,7 +54,6 @@
     "watch:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env zen watch"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
     "@cdm-logger/server": "^5.0.5",
     "@common-stack/core": "0.0.208",
     "@common-stack/server-core": "0.0.208",
@@ -102,6 +101,7 @@
     "ws": "^6.2.1"
   },
   "devDependencies": {
+    "@babel/polyfill": "7.6.0",
     "cross-env": "^5.2.0",
     "pm2": "^3.5.0",
     "rimraf": "^2.6.3"
