added raf and polyfill as zen adds automatically

--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "generateGraphql": "graphql-codegen",
     "generateGraphql:watch": "npm run generateGraphql -- --watch",
     "jest": "./node_modules/.bin/jest",
-    "lerna": "lerna bootstrap --hoist",
+    "lerna": "lerna bootstrap --hoist --ignore-scripts",
     "predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
     "devpublish": "lerna publish --ignore-scripts --cd-version=prerelease",
     "devpublish:force": "npm run devpublish -- --force-publish=*",
     "postdevpublish": "git checkout develop",
-    "prepublish": "git checkout publish && git merge -s recursive -X theirs master",
-    "publish": "lerna publish --ignore-scripts --cd-version=patch",
-    "publish:force": "npm run publish -- --force-publish=*",
+    "preLernaPublish": "git checkout publish && git merge -s recursive -X theirs master",
+    "publish": "npm run preLernaPublish && lerna publish --ignore-scripts --cd-version=patch",
+    "publish:force": "npm run preLernaPublish && npm run publish -- --force-publish=*",
     "postpublish": "git checkout master",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "postbootstrap": "npm run build",
@@ -110,7 +110,7 @@
     "@graphql-codegen/typescript-react-apollo": "^1.5.0",
     "@graphql-codegen/typescript-resolvers": "^1.5.0",
     "@hot-loader/react-dom": "^16.10.2",
-    "@larix/zen": "0.1.13",
+    "@larix/zen": "0.1.30",
     "@types/async": "^2.4.1",
     "@types/body-parser": "1.17.0",
     "@types/bunyan": "^1.8.6",
