--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -104,6 +104,7 @@
     "@babel/polyfill": "7.6.0",
     "cross-env": "^5.2.0",
     "pm2": "^3.5.0",
+    "raf": "3.4.1",
     "rimraf": "^2.6.3"
   },
   "typescript": {
