update with well define name"

--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "generateGraphql": "graphql-codegen",
     "generateGraphql:watch": "npm run generateGraphql -- --watch",
     "jest": "./node_modules/.bin/jest",
-    "lerna": "lerna bootstrap --hoist --ignore-scripts",
+    "lerna": "lerna bootstrap --hoist",
     "predevpublish": "git checkout devpublish && git merge -s recursive -X theirs develop",
     "devpublish": "lerna publish --ignore-scripts --cd-version=prerelease",
     "devpublish:force": "npm run devpublish -- --force-publish=*",
     "postdevpublish": "git checkout develop",
-    "preLernaPublish": "git checkout publish && git merge -s recursive -X theirs master",
-    "publish": "npm run preLernaPublish && lerna publish --ignore-scripts --cd-version=patch",
+    "lerna:prepublish": "git checkout publish && git merge -s recursive -X theirs master",
+    "publish": "npm run lerna:prepublish && lerna publish --ignore-scripts --cd-version=patch",
     "publish:force": "npm run preLernaPublish && npm run publish -- --force-publish=*",
     "postpublish": "git checkout master",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
