--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sample-stack",
-  "version": "0.4.8",
+  "version": "0.4.9",
   "private": true,
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "bugs": {
@@ -101,16 +101,18 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.4.4",
-    "@graphql-codegen/add": "^1.5.0",
-    "@graphql-codegen/cli": "^1.5.0",
-    "@graphql-codegen/fragment-matcher": "^1.5.0",
-    "@graphql-codegen/typescript": "^1.5.0",
-    "@graphql-codegen/typescript-graphql-files-modules": "^1.5.0",
-    "@graphql-codegen/typescript-operations": "^1.5.0",
-    "@graphql-codegen/typescript-react-apollo": "^1.5.0",
-    "@graphql-codegen/typescript-resolvers": "^1.5.0",
+    "@graphql-codegen/add": "1.8.0",
+    "@graphql-codegen/cli": "1.8.0",
+    "@graphql-codegen/fragment-matcher": "1.8.0",
+    "@graphql-codegen/import-types-preset": "1.8.0",
+    "@graphql-codegen/near-operation-file-preset": "1.8.0",
+    "@graphql-codegen/typescript": "1.8.0",
+    "@graphql-codegen/typescript-graphql-files-modules": "1.8.0",
+    "@graphql-codegen/typescript-operations": "1.8.0",
+    "@graphql-codegen/typescript-react-apollo": "1.8.0",
+    "@graphql-codegen/typescript-resolvers": "1.8.0",
     "@hot-loader/react-dom": "^16.10.2",
-    "@larix/zen": "0.1.30",
+    "@larix/zen": "0.1.32",
     "@types/async": "^2.4.1",
     "@types/body-parser": "1.17.0",
     "@types/bunyan": "^1.8.6",
@@ -167,7 +169,6 @@
     "file-loader": "^3.0.1",
     "freeport-async": "^1.1.1",
     "fs-extra": "^7.0.1",
-    "graphql-code-generator": "^0.18.1",
     "hemera-testsuite": "^4.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
