--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -132,6 +132,7 @@
     "@babel/polyfill": "7.6.0",
     "cross-env": "^5.2.0",
     "pm2": "^3.5.0",
+    "rimraf": "^2.6.3",
     "raf": "3.4.1"
   }
 }
