--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -62,7 +62,8 @@
     "@sample-stack/microservice-nats": "file:../../packages/sample-microservice-nats",
     "@sample-stack/server-core": "file:../../packages/sample-server-core",
     "@sample-stack/store": "file:../../packages/sample-store",
-    "apollo-datasource-rest": "^0.6.1",
+    "apollo-datasource": "^0.6.3",
+    "apollo-datasource-rest": "^0.6.6",
     "apollo-errors": "^1.9.0",
     "apollo-link": "^1.2.12",
     "apollo-link-batch-http": "^1.2.12",
@@ -76,6 +77,7 @@
     "app-root-path": "^2.2.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dataloader": "^1.4.0",
     "dotenv": "^7.0.0",
     "envalid": "^5.0.0",
     "esm": "^3.2.22",
