--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -72,8 +72,11 @@
     "apollo-link-http": "^1.5.15",
     "apollo-link-ws": "^1.0.18",
     "apollo-logger": "^0.3.2",
-    "apollo-server-core": "^2.4.8",
-    "apollo-server-express": "^2.4.8",
+    "apollo-server-cache-memcached": "^0.6.3",
+    "apollo-server-caching": "^0.5.0",
+    "apollo-server-core": "^2.9.7",
+    "apollo-server-express": "^2.9.7",
+    "apollo-server-plugin-response-cache": "^0.3.5",
     "app-root-path": "^2.2.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
