--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "devpublish:push": "npm run predevpublish && git push origin devpublish && npm run postdevpublish",
     "devpublish:force": "npm run devpublish -- --force-publish=*",
     "postdevpublish": "git checkout develop",
-    "lerna:prepublish": "git checkout publish && git merge -s recursive -X theirs master",
-    "publish": "npm run lerna:prepublish && lerna publish --ignore-scripts --cd-version=patch",
-    "publish:force": "npm run preLernaPublish && npm run publish -- --force-publish=*",
-    "postpublish": "git checkout master",
+    "prelernapublish": "git checkout publish && git merge -s recursive -X theirs master",
+    "lernapublish": "lerna publish --ignore-scripts --cd-version=patch",
+    "postlernapublish": "git checkout master",
+    "publish": "npm run lernapublish",
+    "publish:force": "npm run lernapublish -- --force-publish=*",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "postbootstrap": "npm run build",
     "prebootstrap": "lerna run prepare",
