--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -124,6 +124,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "rxjs": "^6.5.1",
+    "rxjs-compat": "^6.5.2",
     "serialize-javascript": "^1.7.0",
     "sourcemapped-stacktrace": "^1.1.9",
     "subscriptions-transport-ws": "0.9.15",
